--- a/info442/src/login.css
+++ b/info442/src/login.css
@@ -1,66 +1,109 @@
+* {
+    font-family: 'Poppins', sans-serif;
+}
+
 body {
-    font-family: Arial, sans-serif;
-    background-color: #f4f4f9;
+    user-select: none;
+    overflow-y: hidden;
     display: flex;
     justify-content: center;
     align-items: center;
+    background: hsl(218deg 50% 91%);
     height: 100vh;
-    margin: 0;
 }
 
-h2 {
-    text-align: center;
-    color: #333;
+.screen-1 {
+    background: hsl(213deg 85% 97%);
+    padding: 2em;
+    display: flex;
+    flex-direction: column;
+    border-radius: 30px;
+    box-shadow: 0 0 2em hsl(231deg 62% 94%);
+    gap: 2em;
 }
 
-form {
-    background-color: #fff;
-    padding: 20px;
-    border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    width: 300px;
+.screen-1 .logo {
+    margin-top: -3em;
 }
 
-label {
-    display: block;
-    margin-bottom: 8px;
-    color: #555;
+.screen-1 .email {
+    background: hsl(0deg 0% 100%);
+    box-shadow: 0 0 2em hsl(231deg 62% 94%);
+    padding: 1em;
+    display: flex;
+    flex-direction: column;
+    gap: 0.5em;
+    border-radius: 20px;
+    color: hsl(0deg 0% 30%);
+    margin-top: -3em;
 }
 
-input[type="text"],
-input[type="password"] {
-    width: 100%;
-    padding: 10px;
-    margin-bottom: 15px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    box-sizing: border-box;
-}
-
-button {
-    width: 100%;
-    padding: 10px;
-    background-color: #5cb85c;
-    color: white;
+.screen-1 .email input {
+    outline: none;
     border: none;
-    border-radius: 5px;
+}
+
+.screen-1 .email input::placeholder {
+    color: hsl(0deg 0% 0%);
+    font-size: 0.9em;
+}
+
+.screen-1 .email ion-icon {
+    color: hsl(0deg 0% 30%);
+    margin-bottom: -.2em;
+}
+
+.screen-1 .password {
+    background: hsl(0deg 0% 100%);
+    box-shadow: 0 0 2em hsl(231deg 62% 94%);
+    padding: 1em;
+    display: flex;
+    flex-direction: column;
+    gap: 0.5em;
+    border-radius: 20px;
+    color: hsl(0deg 0% 30%);
+}
+
+.screen-1 .password input {
+    outline: none;
+    border: none;
+}
+
+.screen-1 .password input::placeholder {
+    color: hsl(0deg 0% 0%);
+    font-size: 0.9em;
+}
+
+.screen-1 .password ion-icon {
+    color: hsl(0deg 0% 30%);
+    margin-bottom: -.2em;
+}
+
+.screen-1 .password .show-hide {
+    margin-right: -5em;
+}
+
+.screen-1 .login {
+    padding: 1em;
+    background: hsl(233deg 36% 38%);
+    color: hsl(0 0 100);
+    border: none;
+    border-radius: 30px;
+    font-weight: 600;
+}
+
+.footer {
+    display: flex;
+    font-size: 0.7em;
+    color: hsl(0deg 0% 37%);
+    gap: 14em;
+    padding-bottom: 10em;
+}
+
+.footer span {
     cursor: pointer;
 }
 
-button:hover {
-    background-color: #4cae4c;
-}
-
-p {
-    text-align: center;
-    color: #333;
-}
-
-a {
-    color: #5cb85c;
-    text-decoration: none;
-}
-
-a:hover {
-    text-decoration: underline;
+button {
+    cursor: pointer;
 }
