--- a/info442/src/styles.css
+++ b/info442/src/styles.css
@@ -40,7 +40,7 @@ h2 {
     margin-top: 15px;
     font-weight: bold;
     font-size: 14px;
-    text-align: left; /* Align labels to the left for better readability */
+    text-align: center; 
 }
 
 /* Form Inputs */
@@ -104,14 +104,14 @@ a:hover {
     height: 300px;
     border-radius: 50%;
     border: 2px solid #5cb85c;
-    margin-bottom: 20px;
+    margin-bottom: 100px;
 }
 
 /* User Details */
 .user-info {
     font-size: 18px;
     color: #333;
-    margin-bottom: 10px;
+    margin-bottom: 100px;
 }
 
 .user-info span {
