--- a/info442/src/page/Navigation.css
+++ b/info442/src/page/Navigation.css
@@ -1,21 +1,21 @@
-
-.navbar-container {
-    background-color: lightgreen; 
-    text-align: center;
-    padding: 10px 0;
-}
-
 .navbar {
     display: inline-block;
 }
 
-.navbar a {
-    color: black;
+/* .navbar a {
+    color: white;
     text-decoration: none;
     margin: 0 15px;
-    font-size: 20px;
-}
+    font-size: 110%;
+} */
 
 .navbar a:hover {
     text-decoration: underline;
 }
+
+.navbar-background {
+    background-image: url("../img/pnw.jpg");
+    background-size: cover;
+    background-position: center;
+    width: 100%
+  }
