--- a/info442/src/page/event.css
+++ b/info442/src/page/event.css
@@ -48,26 +48,29 @@ body {
 }
 
 .filter-container {
-    margin-bottom: 20px;
     display: flex;
-    gap: 10px;
+    justify-content: center; 
+    flex-wrap: wrap;  
+    margin: 20px 0; 
 }
 
-#category-select {
-    padding: 5px;
+.filter-container button {
     font-size: 1em;
-}
-
-button {
-    padding: 5px 10px;
-    font-size: 1em;
-    background-color: #71a8e3;
-    color: white;
-    border: none;
-    border-radius: 4px;
     cursor: pointer;
+    width: 200px; 
+    margin: 10px; 
+    text-align: center;  
+    padding: 20px;  
+    border: 1px solid black;
+    border-radius: 8px; 
+    background-color: white;
 }
 
-button:hover {
+.filter-container button:hover {
     background-color: #54d0e9;
+}
+
+.filter-container button:focus {
+    outline: 2px solid #333;
+    background-color: #3a99d9;
 }
