deleted event (lowercse) edited the explore filter so it is buttons

--- a/info442/src/components/ExploreEvent.css
+++ b/info442/src/components/ExploreEvent.css
@@ -35,7 +35,7 @@
 
 .event-card a {
     display: block;
-    background-color: #6f2323;
+    background-color:rgb(141, 210, 141);
     color: white;
     text-align: center;
     padding: 10px;
