testing different backgrounds

--- a/info442/src/page/Navigation.css
+++ b/info442/src/page/Navigation.css
@@ -14,7 +14,7 @@
 }
 
 .navbar-background {
-    background-image: url("../img/green-floral.jpg");
+    background-image: url("../img/pnw.jpg");
     background-size: cover;
     background-position: center;
     width: 100%
