--- a/info442/src/components/Myevent.css
+++ b/info442/src/components/Myevent.css
@@ -20,7 +20,7 @@ header, footer {
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    background-image: url(../img/seattle.jpg);
+    background-image: url(/public/img/seattle.jpg);
 }
 
 nav {
