--- a/info442/src/components/Navigation.css
+++ b/info442/src/components/Navigation.css
@@ -1,21 +1,73 @@
-.navbar {
-    display: inline-block;
-}
-
-/* .navbar a {
-    color: white;
-    text-decoration: none;
-    margin: 0 15px;
-    font-size: 110%;
-} */
-
-.navbar a:hover {
-    text-decoration: underline;
-}
-
-.navbar-background {
-    background-image: url("/public/img/pnw.jpg");
-    background-size: cover;
-    background-position: center;
-    width: 100%
+.navbar-custom {
+    font-family: 'Poppins', sans-serif;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    padding: 1rem;
   }
+  
+  .navbar-background {
+    background-image: url('/public/img/green.jpg');
+    background-size: cover;
+    background-position: bottom center;
+    width: 100%;
+    padding: 10px 0;
+    backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(5px);
+  }
+  
+  .navbar-brand {
+    color: white !important;
+    font-weight: bold;
+    text-transform: uppercase;
+    background: none;
+    box-shadow: none;
+    padding: 0;
+    font-size: 2.0rem;
+    display: flex;
+    align-items: center;
+  }
+
+  .navbar-favicon {
+    width: 35px; 
+    height: auto;
+    margin-right: 5px; 
+  }
+  
+  .navbar-brand:hover {
+    color: #2ecc71 !important; 
+  }
+  
+  .navbar-nav {
+    display: flex;
+    gap: 1.5rem;
+    align-items: center;
+  }
+  
+  .nav-link {
+    color: white !important;
+    font-size: 1.1rem;
+    font-weight: 500;
+    padding: 10px 20px;
+    border-radius: 5px;
+    transition: all 0.3s ease;
+  }
+  
+  .nav-link:hover {
+    color: #2ecc71 !important;
+    text-decoration: none;
+    background-color: rgba(241, 196, 15, 0.2); 
+    transform: scale(1.05);
+  }
+  
+  @media (max-width: 991px) {
+    .navbar-nav {
+      flex-direction: column;
+      text-align: center;
+    }
+  
+    .nav-link {
+      font-size: 1.2rem;
+      padding: 12px 20px;
+    }
+  }
+  
+  
