--- a/info442/src/components/Login.css
+++ b/info442/src/components/Login.css
@@ -28,6 +28,7 @@
     color: #fff; /* Ensure paragraphs are readable */
     text-align: center;
     margin-top: 20px;
+    font-size: 60px;
 }
 
 .input-field {
