--- a/info442/src/components/Profile.css
+++ b/info442/src/components/Profile.css
@@ -1,4 +1,12 @@
+
+.home {
+    background-color: rgba(173, 216, 230, 0.5);
+    min-height: 100vh; 
+    width: 100%; 
+}
+
 .profile-container {
+    background-color: #f0f0f0; 
     text-align: center;
     margin-top: 20px;
 }
@@ -14,3 +22,5 @@
 .profile-info {
     margin-top: 10px;
 }
+
+
