--- a/info442/src/components/styles.css
+++ b/info442/src/components/styles.css
@@ -68,6 +68,9 @@ button {
     border-radius: 5px;
     font-size: 16px;
     cursor: pointer;
+    justify-content: center;
+    align-items: center;
+    margin-right: 1rem;
 }
 
 button:hover {
