--- a/info442/src/components/Navigation.css
+++ b/info442/src/components/Navigation.css
@@ -46,13 +46,13 @@
     border-radius: 5px;
     transition: all 0.3s ease;
   }
-  
-  .nav-link:hover {
-    color: #2ecc71 !important;
-    text-decoration: none;
-    background-color: rgba(241, 196, 15, 0.2); 
-    transform: scale(1.05);
-  }
+
+.nav-link:focus,
+.nav-link:hover,
+.navbar-nav .nav-link.active {
+    border-bottom: 3px solid gold;
+    color: #fff;
+}
   
   @media (max-width: 991px) {
     .navbar-nav {
