--- a/info442/src/components/Navigation.css
+++ b/info442/src/components/Navigation.css
@@ -7,7 +7,7 @@
   .navbar-background {
     background-image: url('/public/img/green.jpg');
     background-size: cover;
-    background-position: bottom center;
+    background-position: center center;
     width: 100%;
     padding: 10px 0;
     backdrop-filter: blur(5px);
